fixed button clipping issues

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ li.dropdown {
 }
 .innerContainer button{
   margin-right:10%;
-  margin-top: 3%;
+  margin-top: 0%;
   margin-left:10%;
   float: right;
   color: white;
